Fix overflow

--- a/resources/assets/sass/ui/dashboard/_bills.scss
+++ b/resources/assets/sass/ui/dashboard/_bills.scss
@@ -383,10 +383,13 @@
     }
 
     &.biller {
+      overflow: visible;
+
       p {
         height: 1.4em;
         font-size: 2.2rem;
         font-weight: 500;
+        overflow: visible;
       }
     }
 
